Update to SDK 28 and latest AndroidX

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,7 @@
-import org.apache.tools.ant.taskdefs.condition.Os
-
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 28
 
     sourceSets.main {
         jniLibs.srcDir 'src/main/libs'
@@ -13,30 +10,17 @@ android {
 
     defaultConfig {
         applicationId "com.kalab.mastergames"
-        minSdkVersion 7
-        targetSdkVersion 21
+        minSdkVersion 14
+        targetSdkVersion 28
     }
 
     buildTypes {
         release {
         }
     }
-
-    // call regular ndk-build(.cmd) script from app directory
-    task ndkBuild(type: Exec) {
-        if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-            commandLine 'ndk-build.cmd', '-C', file('src/main').absolutePath
-        } else {
-            commandLine 'ndk-build', '-C', file('src/main').absolutePath
-        }
-    }
-
-    tasks.withType(JavaCompile) {
-        compileTask -> compileTask.dependsOn ndkBuild
-    }
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.2'
-    compile 'com.android.support:appcompat-v7:21.0.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
